<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pages.RegisterPage">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/register_page_back"
            android:id="@+id/register_page_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitXY"
    />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/personal_data_linear_layout"
            android:layout_marginTop="200dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:fontFamily="@font/lato"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:drawableStart="@drawable/person_img"
                android:drawablePadding="10sp"
                android:textColorHighlight="#363FB8"
                android:textColorLink="#363FB8"
                android:hint="@string/name_field_text"
                android:ems="10"
                android:id="@+id/name_field"
                android:minHeight="48dp"
        />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/lato"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:drawableStart="@drawable/lock_img"
                android:drawablePadding="10sp"
                android:textColorHighlight="#363FB8"
                android:textColorLink="#363FB8"
                android:hint="@string/pass_field_text"
                android:ems="10"
                android:id="@+id/pass_field"
                android:minHeight="48dp"
        />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/lato"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:drawableStart="@drawable/lock_img"
                android:drawablePadding="10sp"
                android:textColorHighlight="#363FB8"
                android:textColorLink="#363FB8"
                android:hint="@string/repeat_pass_field_text"
                android:ems="10"
                android:id="@+id/repeat_pass_field"
                android:minHeight="48dp"
        />

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/personal_data_linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/person_characteristic_linear_layout">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:fontFamily="@font/lato"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:drawableStart="@drawable/time_img"
                android:drawablePadding="10sp"
                android:textColorHighlight="#363FB8"
                android:textColorLink="#363FB8"
                android:hint="@string/age_field_text"
                android:ems="10"
                android:id="@+id/age_field"
        />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:fontFamily="@font/lato"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:drawableStart="@drawable/height_img"
                android:drawablePadding="10sp"
                android:textColorHighlight="#363FB8"
                android:textColorLink="#363FB8"
                android:hint="@string/height_field_text"
                android:ems="10"
                android:id="@+id/height_field"
                android:minHeight="48dp"
        />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:fontFamily="@font/lato"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:drawableStart="@drawable/scale_img"
                android:drawablePadding="10sp"
                android:textColorHighlight="#363FB8"
                android:textColorLink="#363FB8"
                android:hint="@string/mass_field_text"
                android:ems="10"
                android:id="@+id/mass_field"
                android:minHeight="48dp"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <CheckBox
                    android:text="@string/male_checkbox_text"
                    android:fontFamily="@font/lato"
                    android:textSize="25sp"
                    android:drawableStart="@drawable/male_img"
                    android:drawablePadding="5sp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/male_checkbox"
            />

            <CheckBox
                    android:text="@string/female_checkbox_text"
                    android:fontFamily="@font/lato"
                    android:textSize="25sp"
                    android:layout_gravity="end"
                    android:drawableStart="@drawable/female_img"
                    android:drawablePadding="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female_checkbox"
            />
        </LinearLayout>

    </LinearLayout>
    <Button
            android:text="@string/confirm_button_text"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_black"
            android:textSize="25sp"
            android:backgroundTint="#363FB8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_characteristic_linear_layout"
            android:layout_marginTop="80dp"
            android:id="@+id/confirm_button"
    />

    <TextView
            android:text="@string/register_page_title_text"
            android:layout_width="wrap_content"
            android:fontFamily="@font/lato_black"
            android:textSize="35sp"
            android:textColor="#363FB8"
            android:layout_height="wrap_content"
            android:id="@+id/register_page_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/personal_data_linear_layout"
            app:layout_constraintTop_toTopOf="@+id/register_page_background"
    />
</androidx.constraintlayout.widget.ConstraintLayout>