<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pages.StartPage">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/start_page_background"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/start_page_background_gradient"
    />

    <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:id="@+id/main_logo"
            app:srcCompat="@drawable/main_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_linear_layout"
            android:layout_marginTop="80dp"
    />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:id="@+id/logo_linear_layout">

        <TextView
                android:text="@string/header_text"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="@color/lt_white"
                android:fontFamily="@font/lato_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_text"
        />

        <TextView
                android:text="@string/app_name"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="@color/lt_white"
                android:fontFamily="@font/lato_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/app_name_text"
        />
    </LinearLayout>
    <ImageView
            android:src="@drawable/start_page_main_button"
            android:layout_width="238dp"
            android:layout_height="96dp"
            android:id="@+id/main_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_logo"
            android:layout_marginTop="80dp"
    />

    <TextView
            android:text="@string/button_inscription"
            android:textColor="@color/lt_white"
            android:fontFamily="@font/lato_black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_button_text"
            app:layout_constraintStart_toStartOf="@+id/main_button"
            app:layout_constraintEnd_toEndOf="@+id/main_button"
            app:layout_constraintBottom_toBottomOf="@+id/main_button"
            app:layout_constraintTop_toTopOf="@+id/main_button"
            app:layout_constraintVertical_bias="0.32999998"
    />

    <TextView
            android:text="Version"
            android:layout_width="wrap_content"
            android:textColor="@color/lt_white"
            android:fontFamily="@font/lato"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/version_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:text="@string/authors_text"
            android:layout_width="wrap_content"
            android:textColor="@color/lt_white"
            android:fontFamily="@font/lato"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/authors_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>